# zed-python-autodoc

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/lsp-server/: Cargo.toml
crates/lsp-server/.cargo/: config.toml
crates/lsp-server/src/: docgen.rs  main.rs
examples/: complex_types.py  dataclasses.py  nested_functions.py  raises.py  standard.py
src/: lib.rs
