[workspace]
members = [".", "crates/lsp-server"]
resolver = "2"

[package]
name = "python-autodoc"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Zed extension that auto-generates PEP 257-compliant Python docstrings"
repository = "https://github.com/eallender/zed-python-autodoc"
homepage = "https://github.com/eallender/zed-python-autodoc"
keywords = ["zed", "python", "docstring", "documentation", "pep257"]
categories = ["development-tools"]

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
