[package]
name = "python-autodoc-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "python-autodoc-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std"] }
tree-sitter = "0.24"
tree-sitter-python = "0.23"
